--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@fontsource/nunito": "^5.2.6",
     "antd": "^5.27.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
