--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.27.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-ga4": "^2.1.0",
     "react-router-dom": "^7.8.0",
     "use-debounce": "^10.0.5",
     "xlsx": "^0.18.5"
