--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@ant-design/icons": "^6.0.0",
     "@fontsource/nunito": "^5.2.6",
     "antd": "^5.27.0",
+    "firebase": "^12.1.0",
     "react": "^19.1.1",
+    "react-barcode": "^1.6.1",
     "react-dom": "^19.1.1",
     "react-ga4": "^2.1.0",
     "react-router-dom": "^7.8.0",
