--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@ant-design/icons": "^6.0.0",
     "@fontsource/nunito": "^5.2.6",
     "antd": "^5.27.0",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "firebase": "^12.1.0",
+    "firebase-admin": "^13.4.0",
     "react": "^19.1.1",
     "react-barcode": "^1.6.1",
     "react-dom": "^19.1.1",
