--- a/firebase.json
+++ b/firebase.json
@@ -14,5 +14,8 @@
         "npm --prefix \"$RESOURCE_DIR\" run lint"
       ]
     }
+  ],
+  "rewrites": [
+    { "source": "**", "destination": "/index.html" }
   ]
 }
