--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.1.1",
     "react-ga4": "^2.1.0",
     "react-router-dom": "^7.8.0",
+    "react-transition-group": "^4.4.5",
     "use-debounce": "^10.0.5",
     "xlsx": "^0.18.5"
   },
